<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.games.peter.project_live_football_tactics.Activity.SignupActivity"
    android:background="@color/Grey_blue">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"
        android:text="Profile Picture"/>
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/civ_signup_profile_picture"
        android:layout_gravity="center"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_profile_picture"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFFFFFFF"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#f3f3f3"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#f3f3f3"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <EditText
                android:id="@+id/et_signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawablePadding="3dp"
                android:background="@drawable/et_email_background"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:hint="@string/username"
                android:maxLength="20"
                android:drawableLeft="@drawable/ic_profile"/>

            <EditText
                android:id="@+id/et_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawablePadding="3dp"
                android:background="@drawable/et_email_background"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:hint="@string/e_mail"
                android:maxLength="35"
                android:drawableLeft="@drawable/ic_email"/>
            <EditText
                android:id="@+id/et_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawablePadding="3dp"
                android:padding="10dp"
                android:background="@drawable/et_email_background"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:hint="@string/password"
                android:maxLength="20"
                android:drawableLeft="@drawable/ic_password"/>
        <EditText
            android:id="@+id/et_signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="3dp"
            android:padding="10dp"
            android:background="@drawable/et_email_background"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/confirm_password"
            android:maxLength="20"
            android:drawableLeft="@drawable/ic_password"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/btn_signup_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_login_background"
        android:textColor="@color/bright_blue"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/signup"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
